--- a/Detectors/ITSMFT/ITS/base/CMakeLists.txt
+++ b/Detectors/ITSMFT/ITS/base/CMakeLists.txt
@@ -14,7 +14,7 @@ o2_add_library(ITSBase
                        src/MisalignmentParameter.cxx
                        src/DescriptorInnerBarrel.cxx
                        src/ITSBaseParam.cxx
-               PUBLIC_LINK_LIBRARIES O2::DetectorsBase O2::ITSMFTBase $<$<BOOL:${ENABLE_UPGRADES}>:O2::ITS3Base>)
+               PUBLIC_LINK_LIBRARIES O2::DetectorsBase O2::ITSMFTBase)
 o2_target_root_dictionary(ITSBase
                           HEADERS include/ITSBase/GeometryTGeo.h
                                   include/ITSBase/ContainerFactory.h
