--- a/Detectors/ITSMFT/ITS/simulation/CMakeLists.txt
+++ b/Detectors/ITSMFT/ITS/simulation/CMakeLists.txt
@@ -13,8 +13,7 @@ o2_add_library(ITSSimulation
                SOURCES src/V11Geometry.cxx src/V1Layer.cxx src/V3Layer.cxx
                        src/Detector.cxx src/V3Services.cxx src/V3Cage.cxx
                        src/DescriptorInnerBarrelITS2.cxx
-               PUBLIC_LINK_LIBRARIES O2::ITSBase O2::ITSMFTSimulation ROOT::Physics
-                                     $<$<BOOL:${ENABLE_UPGRADES}>:O2::ITS3Base> $<$<BOOL:${ENABLE_UPGRADES}>:O2::ITS3Simulation>)
+               PUBLIC_LINK_LIBRARIES O2::ITSBase O2::ITSMFTSimulation ROOT::Physics)
 
 o2_target_root_dictionary(ITSSimulation
                           HEADERS include/ITSSimulation/Detector.h
