--- a/Detectors/GlobalTrackingWorkflow/study/CMakeLists.txt
+++ b/Detectors/GlobalTrackingWorkflow/study/CMakeLists.txt
@@ -16,6 +16,7 @@ o2_add_library(GlobalTrackingStudy
                        src/TrackingStudy.cxx
                        src/TPCDataFilter.cxx
                        src/ITSOffsStudy.cxx
+                       src/TPCV0Study.cxx
                        src/DumpTracks.cxx
                PUBLIC_LINK_LIBRARIES O2::GlobalTracking
                                      O2::GlobalTrackingWorkflowReaders
@@ -47,4 +48,9 @@ o2_add_executable(study-workflow
 o2_add_executable(dump-workfow
                   COMPONENT_NAME bc-tracks
                   SOURCES src/track-dump-workflow.cxx
+                  PUBLIC_LINK_LIBRARIES O2::GlobalTrackingStudy)
+
+o2_add_executable(study-workfow
+                  COMPONENT_NAME tpc-v0
+                  SOURCES src/tpc-v0-study-workflow.cxx
                   PUBLIC_LINK_LIBRARIES O2::GlobalTrackingStudy)
